# CAIS-pub-hitl

./: README.md  REVISION_NOTES_v05.md  pyproject.toml
outputs_v04_cooldown_0/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_cooldown_10/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_cooldown_2/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_cooldown_20/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_cooldown_5/: hitl_results.csv
outputs_v04_delay_0/: hitl_results.csv
outputs_v04_delay_1/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_delay_10/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_delay_3/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_delay_5/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_reliability_0.50/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_reliability_0.75/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_reliability_0.90/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_reliability_0.95/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_reliability_1.00/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_scenario_bottleneck/: hitl_results.csv
outputs_v04_scenario_crossing/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_scenario_head_on/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_scenario_overtaking/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_scenario_restricted_zone/: hitl_results.csv  hitl_sweep_summary.json
outputs_v04_threshold_0.05/: hitl_results.csv  hitl_sweep_summary.json
(+13578 files in other folders)
